# django-uv

./: README.md  db.sqlite3  pyproject.toml
backend/: settings.py
