[project]
name = "demo-project-with-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
prod = [
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
]
